<resources>
    <string name="app_name">GastoViagem</string>
    <string name="autonomy">Autonomia</string>
    <string name="validation">Preencha todos os campos!!!</string>
    <string name="validation2">Não pode ter valor igual a 0!!!</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="seu_gasto_total_sera_de">Seu gasto total será de:</string>
    <string name="rs_0">R$ 0,00</string>
    <string name="calcular">Calcular</string>
    <string name="gasto_viagem">Gasto Viagem</string>
    <string name="click">Clicar</string>
</resources>